metadata/force-app/main/default/objects/Orbiit_Event__c/Orbiit_Event__c.object-meta.xml
<CustomObject>
    <description>Used to store engagement data from Orbiit.ai</description>
    <label>Orbiit Event</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Orbiit Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orbiit Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>