metadata/force-app/main/default/objects/Orbiit_Event__c/fields/Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest__c</fullName>
    <description>Used to store the areas of interest of the customer</description>
    <label>Areas of Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>