metadata/force-app/main/default/objects/Orbiit_Event__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Used to store additional comments related to orbiit engagements</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>