metadata/force-app/main/default/objects/Orbiit_Event__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Used to store the email of the customer contact.</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>