metadata/force-app/main/default/objects/Orbiit_Event__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orbiit Events</relationshipLabel>
    <relationshipName>Orbiit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>