metadata/force-app/main/default/objects/Orbiit_Event__c/fields/Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name__c</fullName>
    <description>Used to store the engagement name from orbiit.ai</description>
    <label>Engagement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>